basics of almost each page done

--- a/index.html
+++ b/index.html
@@ -2,10 +2,126 @@
 layout: default
 ---
 
-<div class="home">
-  Robson Outfitters, LLC, would like to invite you to come join us on one of Idaho's finest hunting trips.
-  Our best hunting season is from the months of September through December.
-  We specialize in quality archery, and guided rifle hunts for trophy deer, elk, bear, grouse, duck and geese.
-  For guidelines on all hunting contact <a href="/contact_us/">Gary Robson</a>.
+<div class="wrapper">
+  <div class="home">
+    Robson Outfitters, LLC, would like to invite you to come join us on one of Idaho's finest hunting trips.
+    Our best hunting season is from the months of September through December.
+    We specialize in quality archery, and guided rifle hunts for trophy deer, elk, bear, grouse, duck and geese.
+    For guidelines on all hunting contact <a href="/contact_us/">Gary Robson</a>.
+  </div>
+</div>
 
+<div class="wrapper-wrapper">
+  <div class="wrapper">
+    <div class="col-wrapper">
+      <div class="col  col-1">
+        <img src="/images/deer_hunt.jpg" alt="Man with mule deer kill" />
+      </div>
+
+      <div class="col col-2">
+        <h2>Deer Hunting</h2>
+        Deer hunting takes place in the month of October. This is a beautiful time with vivid colors and breathtaking scenery.
+        You will see an assortment of big mule deer. We stay in wall tents, with stoves in the tents. You will have three square meals a day and sleep on good cots.
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="wrapper-blue">
+  <div class="wrapper">
+    <div class="col-wrapper">
+      <div class="col  col-1">
+        <img src="/images/elk_hunt.jpg" alt="man on a horse" />
+      </div>
+
+      <div class="col col-2">
+        <h2>Elk Hunting</h2>
+        <p>
+          There is no better place on earth to find trophy bull elk than the Rocky Mountains of Idaho.  Here in beautiful Teton Valley, ID elk are abundant.
+          During the rut you can call in world class bull elk.
+        </p>
+
+        <p>
+          We operate in Units 62, 62A, 65 & 67
+        </p>
+        <p>
+          Hunting is hard work and takes a lot of physical effort.
+        </p>
+
+          <strong>Archery Elk Hunting</strong>
+          <p>
+            Hunting is a great experience.  We do the guided archery hunts in September.
+          </p>
+          <p>
+            We stay in wall tents and make it a comfortable camp with good cots. Expect three good meals from our great camp cook.
+            You will have a great bugling experience, getting to hear, see and smell a big bull elk. We aim to get you within 40 yards of the bull elk.
+          </p>
+
+          <strong>Rifle Hunts</strong>
+
+          <p>
+            For the general and the late hunts, we will put you up in the local motel, so you have a warm, comfortable room for the night.
+            We hunt by horseback during the day. You can track big bull elk in the snow. This is an exhilarating experience in our national forest.
+          </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="wrapper-tan">
+  <div class="wrapper">
+    <div class="col-wrapper">
+      <div class="col  col-1">
+        <img src="/images/trail_ride.jpg" alt="man on a horse" />
+      </div>
+
+      <div class="col col-2">
+        <h2>Trail Rides</h2>
+        Take a day or half-day and go on a scenic ride on one our gentle horses that know the trails.
+        Bring your camera. Gorgeous mountain views, vibrant wild flowers, fun, watch for coyotes, moose & maybe even a bear.
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="wrapper-gray">
+  <div class="wrapper">
+    <div class="col-wrapper">
+      <div class="col  col-1">
+        <img src="/images/pack_trip.jpg" alt="man on a horse" />
+      </div>
+
+      <div class="col col-2">
+        <h2>Pack Trips</h2>
+        <p>
+          All the greatness of a trail ride and then you get to spend a night under the stars,
+          and if it is rainy we have a comfortable camp with wall tents and comfortable cots.
+        </p>
+        <p>
+          We have great food and a campfire to make it a great night or nights out in the woods.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="wrapper-blue2">
+  <div class="wrapper">
+    <div class="col-wrapper">
+      <div class="col  col-1">
+        <img src="/images/snowmobiling.jpg" alt="man on a horse" />
+      </div>
+
+      <div class="col col-2">
+        <h2>Snowmobiling</h2>
+        <p>
+          Come join Robson Outfitters from the months of December through March and enjoy freshly groomed trails or the beautiful mountain back country,
+          whichever you choose.  There is always abundant wildlife and breathtaking winter scenery that makes it a fun and exhilarating experience.
+        </p>
+        <p>
+          Half and Full Day trips available.  Camera recommended, warm clothing provided.
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
