change images path

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="/images/deer_hunt.jpg" alt="Man with mule deer kill" />
+        <img src="images/deer_hunt.jpg" alt="Man with mule deer kill" />
       </div>
 
       <div class="col col-2">
@@ -31,7 +31,7 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="/images/elk_hunt.jpg" alt="man on a horse" />
+        <img src="images/elk_hunt.jpg" alt="man on a horse" />
       </div>
 
       <div class="col col-2">
@@ -72,7 +72,7 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="/images/trail_ride.jpg" alt="man on a horse" />
+        <img src="images/trail_ride.jpg" alt="man on a horse" />
       </div>
 
       <div class="col col-2">
@@ -88,7 +88,7 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="/images/pack_trip.jpg" alt="man on a horse" />
+        <img src="images/pack_trip.jpg" alt="man on a horse" />
       </div>
 
       <div class="col col-2">
@@ -109,7 +109,7 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="/images/snowmobiling.jpg" alt="man on a horse" />
+        <img src="images/snowmobiling.jpg" alt="man on a horse" />
       </div>
 
       <div class="col col-2">
