adding base url to links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     Robson Outfitters, LLC, would like to invite you to come join us on one of Idaho's finest hunting trips.
     Our best hunting season is from the months of September through December.
     We specialize in quality archery, and guided rifle hunts for trophy deer, elk, bear, grouse, duck and geese.
-    For guidelines on all hunting contact <a href="/contact_us/">Gary Robson</a>.
+    For guidelines on all hunting contact <a href="{{ site.baseurl }}contact_us/">Gary Robson</a>.
   </div>
 </div>
 
