--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="images/trail_ride.jpg" alt="man on a horse" />
+        <img src="images/trail_ride2.jpg" alt="man on a horse" />
       </div>
 
       <div class="col col-2">
@@ -88,7 +88,7 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="images/pack_trip.jpg" alt="man on a horse" />
+        <img src="images/pack_trip2.jpg" alt="man on a horse" />
       </div>
 
       <div class="col col-2">
