adding a weather summary

--- a/hunting_gear.html
+++ b/hunting_gear.html
@@ -14,6 +14,7 @@ permalink: /hunting_gear/
 <p>
   We will be camping in tents for the Archery Hunts and for the late hunts, you will stay at the local motel in Tetonia or Driggs.
 </p>
-<p>
+<p style="margin-bottom: 40px;">
   Snowmobiling. We can provide clothing if necessary. It would be helpful if you have your own clothing.
 </p>
+<iframe id="forecast_embed" type="text/html" frameborder="0" height="245" width="100%" src="http://forecast.io/embed/#lat=43.871849&lon=-111.177521&name=Felt, Idaho"> </iframe>
