link to hunt planner

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
         </p>
 
         <p>
-          We operate in Units 62, 62A, 65 & 67
+          We operate in Units <a href="https://fishandgame.idaho.gov/ifwis/huntplanner/mapcenter/" target="_blank">62, 62A, 65 & 67</a>
         </p>
         <p>
           Hunting is hard work and takes a lot of physical effort.
