adding new photos and some new styling

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@ layout: page
 title: Contact Us
 permalink: /contact_us/
 ---
-<img src="{{ site.baseurl }}images/moose.jpg" alt="Moose Kill" style="float: right;margin-left: 50px;" />
 <p>
 Feel free to give us a call at <a href="tel:+15092902659">509-290-2659</a> or send us an <a href="mailto:{{site.email}}">email</a>.  Our contact information is at the bottom of every page.  We'd love to hear how we can
 make your next adventure a success!
+<img src="{{ site.baseurl }}images/moose2.jpg" alt="Moose Kill" style="float: right;margin-left: 50px;" />
 </p>
