--- a/dates_of_hunts.html
+++ b/dates_of_hunts.html
@@ -52,3 +52,6 @@ permalink: /dates_of_hunts/
     </tr>
   </tbody>
 </table>
+<p style="margin-top: 20px;">
+  <img src="/images/elk_hunt2.jpg" alt="elk kill" />
+</p>
