adding a new gallery page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     Robson Outfitters, LLC, would like to invite you to come join us on one of Idaho's finest hunting trips.
     Our best hunting season is from the months of September through December.
     We specialize in quality archery, and guided rifle hunts for trophy deer, elk, bear, grouse, duck and geese.
-    For guidelines on all hunting contact <a href="{{ site.baseurl }}contact_us/">Gary Robson</a>.
+    For guidelines on all hunting contact <a href="{{ site.baseurl }}contact_us/">Gary Robson</a>. To see more images, take a look at our <a class="" href="{{ site.baseurl }}photo_gallery/">photo gallery</a>.
   </div>
 </div>
 
@@ -15,7 +15,9 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="images/deer_hunt.jpg" alt="Man with mule deer kill" />
+        <a href="{{ site.baseurl }}photo_gallery/">
+          <img src="images/deer_hunt.jpg" alt="Man with mule deer kill" />
+        </a>
       </div>
 
       <div class="col col-2">
@@ -31,7 +33,9 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="images/elk_hunt.jpg" alt="man on a horse" />
+        <a href="{{ site.baseurl }}photo_gallery/">
+          <img src="images/elk_hunt.jpg" alt="man on a horse" />
+        </a>
       </div>
 
       <div class="col col-2">
@@ -72,7 +76,9 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="images/trail_ride2.jpg" alt="man on a horse" />
+        <a href="{{ site.baseurl }}photo_gallery/">
+          <img src="images/trail_ride2.jpg" alt="man on a horse" />
+        </a>
       </div>
 
       <div class="col col-2">
@@ -88,7 +94,9 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="images/pack_trip2.jpg" alt="man on a horse" />
+        <a href="{{ site.baseurl }}photo_gallery/">
+          <img src="images/pack_trip2.jpg" alt="man on a horse" />
+        </a>
       </div>
 
       <div class="col col-2">
@@ -109,7 +117,9 @@ layout: default
   <div class="wrapper">
     <div class="col-wrapper">
       <div class="col  col-1">
-        <img src="images/snowmobiling.jpg" alt="man on a horse" />
+        <a href="{{ site.baseurl }}photo_gallery/">
+          <img src="images/snowmobiling.jpg" alt="man on a horse" />
+        </a>
       </div>
 
       <div class="col col-2">
