--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -19,10 +19,18 @@ images:
     title: Elk Kill
     w: 600
     h: 800
+  - image_path: /images/gallery/packout.jpg
+    title: Packing out the elk
+    w: 1201
+    h: 1600
   - image_path: /images/gallery/elk_hunt3.jpg
     title: Elk Kill
     w: 500
     h: 667
+  - image_path: /images/gallery/elk_hunt4.jpg
+    title: Elk Kill
+    w: 1000
+    h: 563
   - image_path: /images/gallery/moose.jpg
     title: Moose Kill
     w: 300
@@ -43,6 +51,10 @@ images:
     title: Trail Ride
     w: 500
     h: 402
+  - image_path: /images/gallery/tetons.jpg
+    title: Trail Ride
+    w: 1000
+    h: 563
 ---
 <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
 {% for image in page.images %}
