--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -11,6 +11,10 @@ images:
     title: Pack Trip
     w: 500
     h: 389
+  - image_path: /images/gallery/pack_trip3.jpg
+    title: Pack Trip
+    w: 500
+    h: 667 
   - image_path: /images/gallery/elk_hunt.jpg
     title: Elk Kill
     w: 768
@@ -49,8 +53,12 @@ images:
     h: 490
   - image_path: /images/gallery/trail_ride2.jpg
     title: Trail Ride
-    w: 500
-    h: 402
+    w: 1000
+    h: 600
+  - image_path: /images/gallery/trail_ride3.jpg
+    title: Trail Ride
+    w: 1000
+    h: 750
   - image_path: /images/gallery/tetons.jpg
     title: Trail Ride
     w: 1000
