updating some of the verbiage

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ layout: default
 
       <div class="col col-2">
         <h2>Deer Hunting</h2>
-        Deer hunting takes place in the month of October. This is a beautiful time with vivid colors and breathtaking scenery.
-        You will see an assortment of big mule deer. We stay in wall tents, with stoves in the tents. You will have three square meals a day and sleep on good cots.
+        Deer hunting takes place in the month of October. This is a beautiful time of year in Teton Valley with vivid colors and breathtaking scenery.
+        The deer are big and plentiful in The Teton Valley area, you will see an assortment of big mule deer hunting with us. Your comfort is important to us,
+        we stay in warm wall tents, with stoves in the tents. You will have three square meals a day and sleep on good cots.
       </div>
     </div>
   </div>
@@ -42,7 +43,7 @@ layout: default
         <h2>Elk Hunting</h2>
         <p>
           There is no better place on earth to find trophy bull elk than the Rocky Mountains of Idaho.  Here in beautiful Teton Valley, ID elk are abundant.
-          During the rut you can call in world class bull elk.
+          During the rut you can experience the thrill of a lifetime by call in world class bull elk.
         </p>
 
         <p>
