--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact Us
 permalink: /contact_us/
 ---
 <p>
-Feel free to give us a call at <a href="tel:+15092902659">509-290-2659</a> or send us an <a href="mailto:{{site.email}}">email</a>.  Our contact information is at the bottom of every page.  We'd love to hear how we can
+It is important to get your next hunting adventure scheduled early! Feel free to give us a call at <a href="tel:+15092902659">509-290-2659</a> or send us an <a href="mailto:{{site.email}}">email</a>.  Our contact information is at the bottom of every page.  We'd love to hear how we can
 make your next adventure a success!
 <img src="{{ site.baseurl }}images/moose2.jpg" alt="Moose Kill" style="float: right;margin-left: 50px;" />
 </p>
