adding new images

--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -3,6 +3,50 @@ layout: page
 title: Photo Gallery
 permalink: /photo_gallery/
 images:
+  - image_path: /images/gallery/elk4_2017.jpg
+    title: Downed Bull Elk
+    w: 960
+    h: 1280
+  - image_path: /images/gallery/elk3_2017.jpg
+    title: Downed Bull Elk
+    w: 960
+    h: 1280
+  - image_path: /images/gallery/deer1_2017.jpg
+    title: Downed Mule Deer
+    w: 1600
+    h: 1200
+  - image_path: /images/gallery/elk10_2017.jpg
+    title: Downed Bull Elk
+    w: 2560
+    h: 1440
+  - image_path: /images/gallery/elk9_2017.jpg
+    title: Downed Bull Elk
+    w: 2560
+    h: 1440
+  - image_path: /images/gallery/elk8_2017.jpg
+    title: Downed Bull Elk
+    w: 1440
+    h: 2560
+  - image_path: /images/gallery/elk7_2017.jpg
+    title: Downed Bull Elk
+    w: 2560
+    h: 1440
+  - image_path: /images/gallery/elk6_2017.jpg
+    title: Downed Bull Elk
+    w: 2560
+    h: 1440
+  - image_path: /images/gallery/elk5_2017.jpg
+    title: Downed Bull Elk
+    w: 1995
+    h: 1302
+  - image_path: /images/gallery/elk2_2017.jpg
+    title: Downed Bull Elk
+    w: 2048
+    h: 1536
+  - image_path: /images/gallery/elk1_2017.jpg
+    title: Downed Bull Elk
+    w: 800
+    h: 600
   - image_path: /images/gallery/deer_hunt.jpg
     title: Deer Kill
     w: 1600
@@ -14,7 +58,7 @@ images:
   - image_path: /images/gallery/pack_trip3.jpg
     title: Pack Trip
     w: 500
-    h: 667 
+    h: 667
   - image_path: /images/gallery/elk_hunt.jpg
     title: Elk Kill
     w: 768
