--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: page
 title: About
 permalink: /about/
 ---
-<img src="{{ site.baseurl }}images/trail_ride.jpg" alt="Man on a horse in the mountains" style="float: right; margin-left: 50px;width: 200px;" />
+<img src="../images/trail_ride.jpg" alt="Man on a horse in the mountains" style="float: right; margin-left: 50px;width: 200px;" />
 <p>
   We are family owned. We are located in Felt, Idaho between Grand Teton and Yellowstone National Parks.
 </p>
