--- a/hunting_gear.html
+++ b/hunting_gear.html
@@ -3,7 +3,7 @@ layout: page
 title: Hunting Gear
 permalink: /hunting_gear/
 ---
-<img style="float: right;width: 200px;margin-left: 50px;" src="{{ site.baseurl }}images/mule.jpg" alt="Pack Mule" />
+<img style="float: right;width: 200px;margin-left: 50px;" src="{{ "images/mule.jpg" | absolute_url }}" alt="Pack Mule" />
 <p>
   Beginning Oct 1, you need to dress for winter, temperatures can vary from 40 degrees to 20 degrees as lows and possibly 60 degrees to 40 degrees as highs.
 </p>
