--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,5 @@ permalink: /contact_us/
 <p>
 It is important to get your next hunting adventure scheduled early! Feel free to give us a call at <a href="tel:+12084562805">208-456-2805</a> or <a href="tel:+18007172513">1-800-717-2513</a> or you can send us an <a href="mailto:{{site.email}}">email</a>.  Our contact information is at the bottom of every page.  We'd love to hear how we can
 make your next adventure a success!
-<img src="{{ site.baseurl }}images/moose2.jpg" alt="Moose Kill" style="float: right;margin-left: 50px;" />
+<img src="{{ "images/moose2.jpg" | absolute_url }}" alt="Moose Kill" style="float: right;margin-left: 50px;" />
 </p>
