fix image in gallery

--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -24,9 +24,9 @@ images:
     w: 2560
     h: 1440
   - image_path: /images/gallery/elk8_2017.jpg
-    title: Downed Bull Elk
+    title: Outfitter Shawn 
+    h: 1885
     w: 1440
-    h: 2560
   - image_path: /images/gallery/elk7_2017.jpg
     title: Downed Bull Elk
     w: 2560
