updating for 2018 hunt

--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -3,6 +3,66 @@ layout: page
 title: Photo Gallery
 permalink: /photo_gallery/
 images:
+  - image_path: /images/gallery/2018_1.jpg
+    title: Downed Bull Elk
+    w: 800
+    h: 600
+  - image_path: /images/gallery/2018_2.jpg
+    title: Downed Bull Elk
+    w: 2576
+    h: 1932
+  - image_path: /images/gallery/2018_3.jpg
+    title: Downed Bull Elk
+    w: 2576
+    h: 1932
+  - image_path: /images/gallery/2018_4.jpg
+    title: Downed Bull Elk
+    w: 966
+    h: 966
+  - image_path: /images/gallery/2018_5.jpg
+    title: Downed Bull Elk
+    w: 1932
+    h: 2576
+  - image_path: /images/gallery/2018_6.jpg
+    title: Downed Bull Elk
+    w: 1932
+    h: 2576
+  - image_path: /images/gallery/2018_7.jpg
+    title: Downed Bull Elk
+    w: 2576
+    h: 1932
+  - image_path: /images/gallery/2018_8.jpg
+    title: Downed Bull Elk
+    w: 2576
+    h: 1932
+  - image_path: /images/gallery/2018_9.jpg
+    title: Downed Bull Elk
+    w: 480
+    h: 360
+  - image_path: /images/gallery/2018_10.jpg
+    title: Downed Bull Elk
+    w: 960
+    h: 1280
+  - image_path: /images/gallery/2018_11.jpg
+    title: Downed Bull Elk
+    w: 960
+    h: 1280
+  - image_path: /images/gallery/2018_12.jpg
+    title: Downed Bull Elk
+    w: 2576
+    h: 1932
+  - image_path: /images/gallery/2018_13.jpg
+    title: Downed Bull Elk
+    w: 960
+    h: 1280
+  - image_path: /images/gallery/2018_14.jpg
+    title: Downed Bull Elk
+    w: 960
+    h: 1280
+  - image_path: /images/gallery/2018_15.jpg
+    title: Downed Bull Elk
+    w: 1280
+    h: 960
   - image_path: /images/gallery/elk4_2017.jpg
     title: Downed Bull Elk
     w: 960
