updating photo titles

--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -3,6 +3,14 @@ layout: page
 title: Photo Gallery
 permalink: /photo_gallery/
 images:
+  - image_path: /images/gallery/2018_5.jpg
+    title: Look from the top
+    w: 2576
+    h: 1932
+  - image_path: /images/gallery/2018_6.jpg
+    title: Hunter
+    w: 2576
+    h: 1932
   - image_path: /images/gallery/2018_1.jpg
     title: Downed Bull Elk
     w: 800
@@ -16,23 +24,15 @@ images:
     w: 2576
     h: 1932
   - image_path: /images/gallery/2018_4.jpg
-    title: Downed Bull Elk
+    title: Trusty mount
     w: 966
     h: 966
-  - image_path: /images/gallery/2018_5.jpg
-    title: Downed Bull Elk
-    w: 2576
-    h: 1932
-  - image_path: /images/gallery/2018_6.jpg
-    title: Downed Bull Elk
-    w: 2576
-    h: 1932
   - image_path: /images/gallery/2018_7.jpg
     title: Downed Bull Elk
     w: 2576
     h: 1932
   - image_path: /images/gallery/2018_8.jpg
-    title: Downed Bull Elk
+    title: Hunter on horse
     w: 2576
     h: 1932
   - image_path: /images/gallery/2018_9.jpg
@@ -56,7 +56,7 @@ images:
     w: 960
     h: 1280
   - image_path: /images/gallery/2018_14.jpg
-    title: Downed Bull Elk
+    title: Mule Deer
     w: 960
     h: 1280
   - image_path: /images/gallery/2018_15.jpg
