--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -3,6 +3,18 @@ layout: page
 title: Photo Gallery
 permalink: /photo_gallery/
 images:
+  - image_path: /images/gallery/2019_1.jpg
+    title: Elk head on a pack horse
+    w: 4656
+    h: 3492
+  - image_path: /images/gallery/2019_2.jpg
+    title: Downed Bull Elk
+    w: 4656
+    h: 3492
+  - image_path: /images/gallery/2019_3.jpg
+    title: Downed Deer
+    w: 4656
+    h: 3492
   - image_path: /images/gallery/2018_5.jpg
     title: Look from the top
     w: 2576
