adding two more images

--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -15,6 +15,14 @@ images:
     title: Downed Deer
     w: 600
     h: 450
+  - image_path: /images/gallery/2019_4.jpg
+    title: Downed Bull Elk
+    w: 600
+    h: 450
+  - image_path: /images/gallery/2019_5.jpg
+    title: Downed Elk
+    w: 450
+    h: 600
   - image_path: /images/gallery/2018_5.jpg
     title: Look from the top
     w: 2576
